# adb

./: .gitmodules  CMakeLists.txt  README.md
include/log/: align.h  log.h  log_read.h  logd.h  logger.h
include/private/: android_filesystem_config.h  android_logger.h
include/utils/: String8.h
lib/base/: CMakeLists.txt  file.cpp  logging.cpp  logging_test.cpp  strings.cpp  test_utils.cpp  threads.cpp
lib/base/include/android-base/: logging.h  macros.h  stringprintf.h  unique_fd.h  utf8.h
lib/diagnose_usb/: diagnose_usb.cpp
lib/libcrypto_utils/: CMakeLists.txt  android_pubkey.c
lib/libcutils/: ashmem-host.cpp  load_file.c
lib/libcutils/include/cutils/: compiler.h  sockets.h  threads.h  trace.h
lib/liblog/: CMakeLists.txt  fake_log_device.c  fake_log_device.h  log_cdefs.h  logd_write.c
lib/windows/usb/api/: CMakeLists.txt  adb_api.h
lib/windows/usb/winusb/: CMakeLists.txt  adb_winusb_endpoint_object.cpp  adb_winusb_interface.h  stdafx.h
src/: CMakeLists.txt  adb.cpp  adb.h  adb_io.cpp  adb_io.h  adb_listeners.cpp  adb_unique_fd.cpp  adb_unique_fd.h  adb_utils.cpp  adb_utils.h  fdevent.cpp  file_sync_protocol.h  services.cpp  sockets.cpp  sysdeps.h  sysdeps_win32.cpp  transport.cpp  transport_fd.cpp  types.h  version.cmake
src/client/: adb_install.cpp  asprintf.h  auth.cpp  commandline.cpp  fastdeploy.cpp  file_sync_client.cpp  main.cpp
src/sysdeps/: memory.h  stat.h  uio.h
src/sysdeps/win32/: stat.cpp
